--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <!-- SITE_HEADER -->
     <header class="site-header">
         <div class="site-header__container container">
-            <button class="burger-btn" type="button"></button>
+            <button class="burger">
+                <span></span>
+                <span></span> 
+                <span></span>
+              </button>
             <nav class="sitenav">
-                <div class="contact-us">
-                    <a class="contact-us__link contact-us__link-chat" href="#">Chat with us</a>
-                    <a class="contact-us__link" href="tel:+420 336 775 664">+420 336 775 664</a>
-                    <a class="contact-us__link" href="#">info@freshnesecom.com</a>
-                </div>
+                
                 <ul class="sitenav-list">
                     <li class="sitenav-item">
                         <a class="sitenav-link" href="#">Blog</a>
@@ -31,6 +31,11 @@
                         <a class="sitenav-link" href="#">Careers</a>
                     </li>
                 </ul>
+                <div class="contact-us">
+                    <a class="contact-us__link contact-us__link-chat" href="#">Chat with us</a>
+                    <a class="contact-us__link" href="tel:+420 336 775 664">+420 336 775 664</a>
+                    <a class="contact-us__link" href="#">info@freshnesecom.com</a>
+                </div>
             </nav>
 
             <div class="header-main">
