add site footer

--- a/index.html
+++ b/index.html
@@ -371,8 +371,162 @@
                     </ul>
                 </div>
             </div>
-        
     </header>
+
+
+    <main class="site-main">
+
+    </main>
+
+
+    <footer class="site-footer">
+            <div class="site-footer__container container">
+
+                    <ul class="site-footer__list">
+
+                        <li class="site-footer__item">
+                            <h2 class="footer-list__title">Get in touch</h2>
+                            <ul class="footer-list">
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">About Us</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Careers</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Press Releases</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Blog</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="site-footer__item">
+                            <h2 class="footer-list__title">Connections</h2>
+                            <ul class="footer-list">
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Facebook</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Twitter</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Instagram</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Youtube</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">LinkedIn</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="site-footer__item">
+                            <h2 class="footer-list__title">Earnings</h2>
+                            <ul class="footer-list">
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Become an Affiliate</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Advertise your product</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Sell on Market</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="site-footer__item">
+                            <h2 class="footer-list__title">Account</h2>
+                            <ul class="footer-list">
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Your account</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Returns Centre</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">100 % purchase protection</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Chat with us</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a class="footer-link" href="#">Help</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>
+
+                   <div class="footer-tags">
+                       <h2 class="footer-tags__title">Product tags</h2>
+                    <ul class="footer-tags__list">
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Beans</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Carrots</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Apples</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Garlic</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Mushrooms</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Tomatoes</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Chilli peppers</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Broccoli</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Watermelons</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Oranges</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Bananas</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Grapes</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Cherries</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Meat</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Seo tag</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Fish</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Seo tag</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Fresh food</a>
+                        </li>
+                        <li class="tags-item">
+                            <a class="tags-link" href="#">Lemons</a>
+                        </li>
+                    </ul>
+                   </div>
+                   
+                </div>
+    </footer>
+
 
     <script src="js/main.js"></script>
 </body>
