--- a/index.html
+++ b/index.html
@@ -375,6 +375,155 @@
 
 
     <main class="site-main">
+        <div class="site-main__container container">
+            <ul class="side-menu__list">
+                <li class="side-menu__item">
+                    <h2 class="side-main__title">Category menu</h2>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Bakery</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Fruit and vegetables</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Meat and fish</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Drinks</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Kitchen</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__btn btn" href="#">More categories</a>
+                </li>
+            </ul>
+
+            <div class="accent-cards__wrapper">
+                <div class="accent-card">
+                   <p class="accent-card__text">Banner subfocus</p>
+                   <h2 class="accent-card__title">Space for heading</h2>
+                   <a class="accent-card__btn btn" href="#">Read recepies</a>
+                </div>
+                <div class="accent-card">
+                    <p class="accent-card__text">Banner subfocus</p>
+                   <h2 class="accent-card__title">Space for heading</h2>
+                   <a class="accent-card__btn btn" href="#">Read recepies</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="site-main__container container">
+            <ul class="side-menu__list">
+                <li class="side-main__item">
+                    <h2 class="side-menu__title">Best selling products</h2>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Kitchen</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Meat and fish</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Special nutrition</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Pharmacy</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Baby</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__btn btn" href="#">More categories</a>
+                </li>
+            </ul>
+
+            <div class="cards-wrapper">
+                <div class="card">
+                    <h3 class="card-title">Product Title</h3>
+                    <p class="card-text">Space for a small product description </p>
+                    <div class="card-box">
+                        <b class="card-price">1.48 USD<span></span></b>
+                        <a class="card-btn btn" href="#">Buy now</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-title">Product Title</h3>
+                    <p class="card-text">Space for a small product description </p>
+                    <div class="card-box">
+                        <b class="card-price">1.48 USD<span></span></b>
+                        <a class="card-btn btn" href="#">Buy now</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-title">Product Title</h3>
+                    <p class="card-text">Space for a small product description </p>
+                    <div class="card-box">
+                        <b class="card-price">1.48 USD<span></span></b>
+                        <a class="card-btn btn" href="#">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="site-main__container container">
+            <ul class="side-menu__list">
+                <li class="side-main__item">
+                    <h2 class="side-menu__title">Best from Farmers</h2>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Carrots</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Tomatoes</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Tomatoes</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Chicken</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__link" href="#">Pork</a>
+                </li>
+                <li class="side-menu__item">
+                    <a class="side-menu__btn btn" href="#">More categories</a>
+                </li>
+            </ul>
+
+            <div class="cards-wrapper">
+                <div class="card">
+                    <h3 class="card-title">Product Title</h3>
+                    <p class="card-text">Space for a small product description </p>
+                    <div class="card-box">
+                        <b class="card-price">1.48 USD<span></span></b>
+                        <a class="card-btn btn" href="#">Buy now</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-title">Product Title</h3>
+                    <p class="card-text">Space for a small product description </p>
+                    <div class="card-box">
+                        <b class="card-price">1.48 USD<span></span></b>
+                        <a class="card-btn btn" href="#">Buy now</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-title">Product Title</h3>
+                    <p class="card-text">Space for a small product description </p>
+                    <div class="card-box">
+                        <b class="card-price">1.48 USD<span></span></b>
+                        <a class="card-btn btn" href="#">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </main>
 
