add sidebar checkbox

--- a/category_list.html
+++ b/category_list.html
@@ -423,8 +423,8 @@
                     </div>
 
                     <div class="input-wrapper checkbox__wrapper">
-                        <label class="input-checkbox" for="input-checkbox__field">Filtre
-                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-checkbox__field"
+                        <label class="input-checkbox" for="input-checkbox__field2">Filtre
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-checkbox__field2"
                                 checked>
                             <span class="checkbox-checkmark"></span>
                         </label>
@@ -432,8 +432,8 @@
                     </div>
 
                     <div class="input-wrapper checkbox__wrapper checkbox__wrapper-select">
-                        <label class="input-checkbox" for="input-checkbox__field">Filtre
-                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-checkbox__field"
+                        <label class="input-checkbox" for="input-checkbox__field3">Filtre
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-checkbox__field3"
                                 checked>
                             <span class="checkbox-checkmark"></span>
                         </label>
@@ -478,6 +478,58 @@
                         <span class="categroy-count">48</span>
                     </li>
                  </ul>
+
+                 <div class="brands-checkbox__wrapper">
+                     <h2 class="sidebar-title">Brands</h2>
+                    <form action="">
+                        <label class="input-checkbox" for="input-brands__field">Filtre by brand item
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-brands__field" checked="checked">
+                            <span class="checkbox-checkmark"></span>
+                        </label>
+                        <label class="input-checkbox" for="input-brands__field2">Filtre by brand item
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-brands__field2">
+                            <span class="checkbox-checkmark"></span>
+                        </label>
+                        <label class="input-checkbox" for="input-brands__field3">Filtre by brand item
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-brands__field3">
+                            <span class="checkbox-checkmark"></span>
+                        </label>
+                        <label class="input-checkbox" for="input-brands__field4">Filtre by brand item
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-brands__field4">
+                            <span class="checkbox-checkmark"></span>
+                        </label>
+                        <label class="input-checkbox" for="input-brands__field5">Filtre by brand item
+                            <input class="input-check" type="checkbox" name="input-checkbox" id="input-brands__field5">
+                            <span class="checkbox-checkmark"></span>
+                        </label>
+                    </form>
+                 </div>
+
+                 <div class="rating-checkbox__wrapper">
+                    <h2 class="sidebar-title">Rating</h2>
+                   <form action="">
+                       <label class="input-checkbox star-rating star-five" for="input-rating__field">
+                           <input class="input-check" type="radio" name="input-checkbox" id="input-rating__field" checked>
+                           <span class="checkbox-checkmark"></span>
+                       </label>
+                       <label class="input-checkbox star-rating star-four" for="input-rating__field2">
+                           <input class="input-check" type="radio" name="input-checkbox" id="input-rating__field2">
+                           <span class="checkbox-checkmark"></span>
+                       </label>
+                       <label class="input-checkbox star-rating star-three" for="input-rating__field3">
+                           <input class="input-check" type="radio" name="input-checkbox" id="input-rating__field3">
+                           <span class="checkbox-checkmark"></span>
+                       </label>
+                       <label class="input-checkbox star-rating star-two" for="input-rating__field4">
+                           <input class="input-check" type="radio" name="input-checkbox" id="input-rating__field4">
+                           <span class="checkbox-checkmark"></span>
+                       </label>
+                       <label class="input-checkbox star-rating star-one" for="input-rating__field5">
+                           <input class="input-check" type="radio" name="input-checkbox" id="input-rating__field5">
+                           <span class="checkbox-checkmark"></span>
+                       </label>
+                   </form>
+                </div>
             </div>
             <div class="product-card__wrapper">
 
