--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
                     <li class="menu-item">
                         <ul class="dropdown">
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                             </li>
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                             </li>
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                             </li>
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                             </li>
                         </ul>
                         <a class="menu-link" href="#">Fruit and vegetables</a>
@@ -247,16 +247,16 @@
                             <li class="menu-item">
                                 <ul class="dropdown more-dropdown">
                                     <li class="dropdown-item">
-                                        <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                        <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                                     </li>
                                     <li class="dropdown-item">
-                                        <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                        <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                                     </li>
                                     <li class="dropdown-item">
-                                        <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                        <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                                     </li>
                                     <li class="dropdown-item">
-                                        <a class="dropdown-link" href="#">Fruit and vegetables</a>
+                                        <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
                                     </li>
                                 </ul>
                                 <a class="menu-link" href="#">Fruit and vegetables</a>
@@ -388,7 +388,7 @@
                     <a class="side-menu__link" href="#">Bakery</a>
                 </li>
                 <li class="side-menu__item">
-                    <a class="side-menu__link" href="#">Fruit and vegetables</a>
+                    <a class="side-menu__link" href="category_list.html">Fruit and vegetables</a>
                 </li>
                 <li class="side-menu__item">
                     <a class="side-menu__link" href="#">Meat and fish</a>
