--- a/category_list.html
+++ b/category_list.html
@@ -42,7 +42,7 @@
 
             <div class="header-main">
 
-                <a class="site-header__logo" href="blank_html">
+                <a class="site-header__logo" href="index.html">
                     <img class="site-logo__img" src="img/site-header-logo.svg" alt="site logo" width="177" height="18">
                 </a>
 
