add links to buy btn

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     <p class="card-text">Space for a small product description </p>
                     <div class="card-box">
                         <b class="card-price">1.48 USD<span></span></b>
-                        <a class="card-btn btn" href="#">Buy now</a>
+                        <a class="card-btn btn" href="form-page.html">Buy now</a>
                     </div>
                 </div>
 
@@ -458,7 +458,7 @@
                     <p class="card-text">Space for a small product description </p>
                     <div class="card-box">
                         <b class="card-price">1.48 USD<span></span></b>
-                        <a class="card-btn btn" href="#">Buy now</a>
+                        <a class="card-btn btn" href="form-page.html">Buy now</a>
                     </div>
                 </div>
 
@@ -467,7 +467,7 @@
                     <p class="card-text">Space for a small product description </p>
                     <div class="card-box">
                         <b class="card-price">1.48 USD<span></span></b>
-                        <a class="card-btn btn" href="#">Buy now</a>
+                        <a class="card-btn btn" href="form-page.html">Buy now</a>
                     </div>
                 </div>
             </div>
@@ -504,7 +504,7 @@
                     <p class="card-text">Space for a small product description </p>
                     <div class="card-box">
                         <b class="card-price">1.48 USD<span></span></b>
-                        <a class="card-btn btn" href="#">Buy now</a>
+                        <a class="card-btn btn" href="form-page.html">Buy now</a>
                     </div>
                 </div>
 
@@ -513,7 +513,7 @@
                     <p class="card-text">Space for a small product description </p>
                     <div class="card-box">
                         <b class="card-price">1.48 USD<span></span></b>
-                        <a class="card-btn btn" href="#">Buy now</a>
+                        <a class="card-btn btn" href="form-page.html">Buy now</a>
                     </div>
                 </div>
 
@@ -522,7 +522,7 @@
                     <p class="card-text">Space for a small product description </p>
                     <div class="card-box">
                         <b class="card-price">1.48 USD<span></span></b>
-                        <a class="card-btn btn" href="#">Buy now</a>
+                        <a class="card-btn btn" href="form-page.html">Buy now</a>
                     </div>
                 </div>
             </div>
@@ -592,7 +592,7 @@
                         <p class="card-text">Space for a small product description </p>
                         <div class="card-box">
                             <b class="card-price">1.48 USD<span></span></b>
-                            <a class="card-btn btn" href="#">Buy now</a>
+                            <a class="card-btn btn" href="form-page.html">Buy now</a>
                         </div>
                     </div>
 
@@ -601,7 +601,7 @@
                         <p class="card-text">Space for a small product description </p>
                         <div class="card-box">
                             <b class="card-price">1.48 USD<span></span></b>
-                            <a class="card-btn btn" href="#">Buy now</a>
+                            <a class="card-btn btn" href="form-page.html">Buy now</a>
                         </div>
                     </div>
 
@@ -610,7 +610,7 @@
                         <p class="card-text">Space for a small product description </p>
                         <div class="card-box">
                             <b class="card-price">1.48 USD<span></span></b>
-                            <a class="card-btn btn" href="#">Buy now</a>
+                            <a class="card-btn btn" href="form-page.html">Buy now</a>
                         </div>
                     </div>
 
@@ -619,7 +619,7 @@
                         <p class="card-text">Space for a small product description </p>
                         <div class="card-box">
                             <b class="card-price">1.48 USD<span></span></b>
-                            <a class="card-btn btn" href="#">Buy now</a>
+                            <a class="card-btn btn" href="form-page.html">Buy now</a>
                         </div>
                     </div>
                 </div>
