add content page

--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
             </div>
         </div>
 
-       
-               <!-- slider  -->
+
+        <!-- slider  -->
 
         <section class="slider">
             <div class="global-container container">
@@ -541,35 +541,40 @@
                 <ul id="autoWidth" class="cs-hidden slider-flex">
                     <li>
                         <div class="profil-card">
-                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
                             <h3 class="name">Name and Surname</h3>
                             <img class="user-img" src="img/customer-img.png" alt="Customer" width="48" height="48">
                         </div>
                     </li>
                     <li>
                         <div class="profil-card">
-                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
                             <h3 class="name">Name and Surname</h3>
                             <img class="user-img" src="img/customer-img2.png" alt="Customer" width="48" height="48">
                         </div>
                     </li>
                     <li>
                         <div class="profil-card">
-                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
                             <h3 class="name">Name and Surname</h3>
                             <img class="user-img" src="img/customer-img.png" alt="Customer" width="48" height="48">
                         </div>
                     </li>
                     <li>
                         <div class="profil-card">
-                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
                             <h3 class="name">Name and Surname</h3>
                             <img class="user-img" src="img/customer-img2.png" alt="Customer" width="48" height="48">
                         </div>
                     </li>
-                    <li>        
+                    <li>
                         <div class="profil-card">
-                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
                             <h3 class="name">Name and Surname</h3>
                             <img class="user-img" src="img/customer-img.png" alt="Customer" width="48" height="48">
                         </div>
