--- a/content.html
+++ b/content.html
@@ -36,14 +36,14 @@
                 </ul>
                 <div class="contact-us">
                     <a class="contact-us__link contact-us__link-chat" href="#">Chat with us</a>
-                    <a class="contact-us__link" href="tel:+420 336 775 664">+420 336 775 664</a>
+                    <a class="contact-us__link" href="tel:+420336775664">+420 336 775 664</a>
                     <a class="contact-us__link" href="#">info@freshnesecom.com</a>
                 </div>
             </nav>
 
             <div class="header-main">
 
-                <a class="site-header__logo" href="#">
+                <a class="site-header__logo" href="index.html">
                     <img class="site-logo__img" src="img/site-header-logo.svg" alt="site logo" width="177" height="18">
                 </a>
 
