--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                     <li class="menu-item">
                         <ul class="dropdown">
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="content.html">Carrots from Tomissy Farm</a>
                             </li>
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="content.html">Carrots from Tomissy Farms</a>
                             </li>
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="content.html">Carrots from Tomissy Farm</a>
                             </li>
                             <li class="dropdown-item">
-                                <a class="dropdown-link" href="category_list.html">Fruit and vegetables</a>
+                                <a class="dropdown-link" href="content.html">Carrots from Tomissy Farm</a>
                             </li>
                         </ul>
-                        <a class="menu-link" href="#">Fruit and vegetables</a>
+                        <a class="menu-link" href="category_list.html">Fruit and vegetables</a>
                     </li>
 
                     <li class="menu-item">
