--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <ul class="sitenav-list">
                     <li class="sitenav-item">
-                        <a class="sitenav-link" href="#">Blog</a>
+                        <a class="sitenav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="sitenav-item">
                         <a class="sitenav-link" href="#">About Us</a>
@@ -36,7 +36,7 @@
                 </ul>
                 <div class="contact-us">
                     <a class="contact-us__link contact-us__link-chat" href="#">Chat with us</a>
-                    <a class="contact-us__link" href="tel:+420 336 775 664">+420 336 775 664</a>
+                    <a class="contact-us__link" href="tel:+420336775664">+420 336 775 664</a>
                     <a class="contact-us__link" href="#">info@freshnesecom.com</a>
                 </div>
             </nav>
@@ -112,7 +112,7 @@
                                 <a class="dropdown-link" href="content.html">Carrots</a>
                             </li>
                         </ul>
-                        <a class="menu-link" href="category_list.html">Fruit and vegetables</a>
+                        <a class="menu-link" href="#">Fruit and vegetables</a>
                     </li>
 
                     <li class="menu-item">
@@ -635,7 +635,7 @@
             <div class="blog-container container">
                 <div class="global-container">
                     <h2 class="global-container__title">Read our Blog posts</h2>
-                    <a class="global-container__btn" href="#">Go to Blog</a>
+                    <a class="global-container__btn" href="gallery.html">Go to Blog</a>
                 </div>
 
                 <div class="blog-wrapper">
