--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a class="profil" href="#">
                         <img src="img/user-account.svg" alt="user account icon" width="24" height="24">
                     </a>
-                    <a class="basket" href="#">
+                    <a class="basket" href="form-page.html">
                         <img src="img/pocket.svg" alt="pocket icon" width="24" height="24">
                     </a>
                 </div>
