--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             </div>
 
             <div class="slider-container">
-                <ul id="autoWidth" class="cs-hidden slider-flex">
+                <ul id="autoWidth" class="cs-hidden slider-flex slider-list">
                     <li>
                         <div class="profil-card">
                             <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
@@ -571,14 +571,7 @@
                             <img class="user-img" src="img/customer-img2.png" alt="Customer" width="48" height="48">
                         </div>
                     </li>
-                    <li>
-                        <div class="profil-card">
-                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
-                                smooth as pie. You will get all what you need by writiing a text here “</p>
-                            <h3 class="name">Name and Surname</h3>
-                            <img class="user-img" src="img/customer-img.png" alt="Customer" width="48" height="48">
-                        </div>
-                    </li>
+
                 </ul>
             </div>
         </section>
